--- a/index.html
+++ b/index.html
@@ -6,6 +6,68 @@
     <title>My First Project</title>
 </head>
 <body>
-    
+    <section>
+        <nav>
+            <img src="./assets/FES.svg" alt="">
+            <ul>
+                <li><a href="#about"></a>About</li>
+                <li><a href="#discord"></a>Discord</li>
+                <li><a href="#contact"></a>Contact</li>
+            </ul>
+        </nav>
+        <header>
+            <div>
+                <h1>Best place to learn frontend</h1>
+                <p>Go from being an absolute beginner to pro with a simplified process</p>
+                <button>Start now</button>
+            </div>
+            <figure>
+                <im src="./assets/laptop.png" alt="Home page image"></im>
+            </figure>
+        </header>
+    </section>
+
+    <main>
+        <section id="about">
+            <h2>About</h2>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, alias!</p>
+            </div>
+            <figure>
+                <img src="./assets/about.jpg" alt=""></img>
+            </figure>
+        </section>
+
+        <section id="discord">
+            <h2>Discord</h2>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, alias!</p>
+            </div>
+            <figure>
+                <img src="./assets/discord.png" alt=""></img>
+            </figure>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <form action="">
+                <span>Email</span>
+                <input type="text" placeholder="jane@example.com">
+                <span>Message</span>
+                <textarea placeholder="Your message here"></textarea>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <img src="./assets/FES.svg" alt="">
+        <div>
+            <a href="#about">About</a>
+            <a href="#discord">Discord</a>
+            <a href="#contact">Contact</a>
+            <a href="">Courses</a>
+        </div>
+        <p>Copyright &copy; Frontend Simplified</p>
+    </footer>
 </body>
 </html>
