--- a/index.html
+++ b/index.html
@@ -1,73 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Project</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <section>
         <nav>
-            <img src="./assets/FES.svg" alt="">
+            <img src="./assets/FES.svg" class="logo" alt="">
             <ul>
-                <li><a href="#about"></a>About</li>
-                <li><a href="#discord"></a>Discord</li>
-                <li><a href="#contact"></a>Contact</li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#discord">Discord</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <header>
-            <div>
-                <h1>Best place to learn frontend</h1>
-                <p>Go from being an absolute beginner to pro with a simplified process</p>
-                <button>Start now</button>
+            <div class="row">
+                <div>
+                    <h1>Best place to learn frontend</h1>
+                    <p class="subheader">Go from being an absolute beginner to pro with a simplified process</p>
+                    <button>Start now</button>
+                </div>
+                <figure>
+                    <img src="./assets/laptop.png" alt=""></img>
+                </figure>
             </div>
-            <figure>
-                <im src="./assets/laptop.png" alt="Home page image"></im>
-            </figure>
         </header>
     </section>
 
     <main>
         <section id="about">
             <h2>About</h2>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, alias!</p>
+            <div class="row">
+                <div class="section__description">
+                    <div class="section__description--wrapper">
+                        <p class="section__description--para">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos dolorem eius officiis sunt, quasi quam reprehenderit illum doloremque iure aspernatur delectus, neque quos quas rerum dolor excepturi odit ullam corrupti.
+                        </p>
+                        <p class="section__description--para">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis qui sunt, soluta reiciendis delectus nulla nisi magni ea eum sint minus eveniet quae. Ad, fugiat. Debitis voluptate totam labore veritatis!
+                        </p>
+                    </div>
+                    <figure class=".about__img--wrapper">
+                        <img src="./assets/about.jpg" alt=""></img>
+                    </figure>
+                </div>
             </div>
-            <figure>
-                <img src="./assets/about.jpg" alt=""></img>
-            </figure>
         </section>
 
         <section id="discord">
             <h2>Discord</h2>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, alias!</p>
+            <div class="row">
+                <div class="section__description">
+                    <figure class=".about__img--wrapper">
+                        <img src="./assets/discord.png" alt=""></img>
+                    </figure>
+                    <div class="section__description--wrapper">
+                        <p class="section__description--para">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis atque perspiciatis ea iure expedita. Earum commodi consequuntur, omnis facilis assumenda repellendus ratione saepe, nemo totam voluptatum magnam. Expedita, dolorem repudiandae!
+                        </p>
+                        <p class="section__description--para">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio consectetur deleniti dolorem, iusto corporis perspiciatis modi alias debitis saepe odio vel harum soluta dolorum dolore, ad facilis voluptatem. Cupiditate, aut.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <figure>
-                <img src="./assets/discord.png" alt=""></img>
-            </figure>
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
             <form action="">
                 <span>Email</span>
-                <input type="text" placeholder="jane@example.com">
+                <input type="email" placeholder="jane@example.com">
                 <span>Message</span>
                 <textarea placeholder="Your message here"></textarea>
+                <button>Contact Us!</button>
             </form>
         </section>
     </main>
 
     <footer>
-        <img src="./assets/FES.svg" alt="">
-        <div>
-            <a href="#about">About</a>
-            <a href="#discord">Discord</a>
-            <a href="#contact">Contact</a>
-            <a href="">Courses</a>
+        <img class="footer__logo" src="./assets/FES.svg" alt="">
+        <div class="footer__links">
+            <a class="footer__link" href="#about">About</a>
+            <a class="footer__link" href="#discord">Discord</a>
+            <a class="footer__link" href="#contact">Contact</a>
+            <a class="footer__link" href="">Courses</a>
         </div>
         <p>Copyright &copy; Frontend Simplified</p>
     </footer>
 </body>
+
 </html>
